--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title> Brody Jackson </title>
   <link rel="stylesheet" href = "styles/mainstyle.css"></link>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div class = "random-graphic">
