--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ and spend my time creating things that I find interesting. </p>
       <h2 class = "sectionTitle" id="whatIDoTitle">ABOUT</h2>
         <div class = "flexbox-container moreAbout">
           <div class = "social flexbox-container">
-            <a href = "https://www.linkedin.com/in/brody-jackson-801a04133/"><img class = 'socialImages' src = "images/linkedin.svg"></a>
-            <a href = "https://github.com/BrodyJackson"><img class = 'socialImages' src = "images/github.svg"></a>
-            <img class = 'socialImages' src = "images/instagram.svg">
-            <a href = "https://www.facebook.com/brody.jackson.7"><img class = 'socialImages' src = "images/facebook.svg"></a>
+            <a  class = "anchorTag" href = "https://www.linkedin.com/in/brody-jackson-801a04133/"><img class = 'socialImages' src = "images/linkedin.svg"></a>
+            <a  class = "anchorTag"href = "https://github.com/BrodyJackson"><img class = 'socialImages' src = "images/github.svg"></a>
+            <a class = "anchorTag"> <img class = 'socialImages' src = "images/instagram.svg"></a>
+            <a  class = "anchorTag" href = "https://www.facebook.com/brody.jackson.7"><img class = 'socialImages' src = "images/facebook.svg"></a>
           </div>
           <div id = "content" class = "flexbox-container">
             <div class = "skillsText flexbox-container" id = "greatAt">
