--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ and spend my time creating things that I find interesting. </p>
     </div>
   </div>
 
-  <script src = 'togglebox1.js'></script>
-  <script src = 'togglebox2.js'></script>
+  <!-- <script src = 'togglebox1.js'></script>
+  <script src = 'togglebox2.js'></script> -->
 </body>
 </html>
