fixed images issues

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ and spend my time creating things that I find interesting. </p>
           <div class = "social flexbox-container">
             <a  class = "anchorTag" href = "https://www.linkedin.com/in/brody-jackson-801a04133/"><img class = 'socialImages' src = "images/linkedin.svg"></a>
             <a  class = "anchorTag"href = "https://github.com/BrodyJackson"><img class = 'socialImages' src = "images/github.svg"></a>
-            <a class = "anchorTag"> <img class = 'socialImages' src = "images/instagram.svg"></a>
+            <a class = "anchorTag" href = "https://www.instagram.com/brodyjacks0n/"> <img class = 'socialImages' src = "images/instagram.svg"></a>
             <a  class = "anchorTag" href = "https://www.facebook.com/brody.jackson.7"><img class = 'socialImages' src = "images/facebook.svg"></a>
           </div>
           <div id = "content" class = "flexbox-container">
