added more books

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             </div>
             <div class="flexRow" id="secondRow">
                 <div class="yearBox" id="year2019" onClick="location.href='thisYear.html';" style="cursor: pointer;">
-                    <p class="subTitle">Books of 2019</p>
+                    <p class="subTitle stayBig">Books of 2019</p>
                 </div>
                 <div class="yearBox" id="year2018" onClick="location.href='lastYear.html';" style="cursor: pointer;">
-                    <p class="subTitle">Books of 2018</p>
+                    <p class="subTitle stayBig">Books of 2018</p>
                 </div>
             </div>
             <div class="flexRow" id="thirdRow">
