--- a/lastYear.html
+++ b/lastYear.html
@@ -61,8 +61,56 @@
                 <div class="bookBox booknoRepeat" id="book42018">
                 </div> 
 
+
+
+                <div class="bookBox booknoRepeat" id="book52018">
+                </div> 
+                <div class="bookBox" id="book52018Descrip">
+                    <p class="bookTitle">Brain on Fire: My Month of Madness</p>
+                    <p class="booksubTitle">by Susannah Cahalan</p>
+                    <p class="bookDescrip">n award-winning memoir and instant New York Times bestseller that goes far beyond its riveting medical mystery, Brain on Fire is the powerful account of one woman’s struggle to recapture her identity. <br><br>When twenty-four-year-old Susannah Cahalan woke up alone in a hospital room, strapped to her bed and unable to move or speak, she had no memory of how she’d gotten there.</p>
+                </div>
+
+                <div class="bookBox " id="book62018Descrip">
+                    <p class="bookTitle">We Were Soldiers Once and Young</p>
+                    <p class="booksubTitle">by Harold G. Moore</p>
+                    <p class="bookDescrip">In November 1965, some 450 men of the 1st Battalion, 7th Cavalry, under the command of Lt. Col. Hal Moore, were dropped by helicopter into a small clearing in the Ia Drang Valley. They were immediately surrounded by 2,000 North Vietnamese soldiers. Three days later, only two and a half miles away, a sister battalion was chopped to pieces. Together, these actions at the landing zones X-Ray and Albany constituted one of the most savage and significant battles of the Vietnam War.</p>
+                </div>
+                <div class="bookBox booknoRepeat" id="book62018">
+                </div> 
+
+                <div class="bookBox booknoRepeat" id="book72018">
+                </div> 
+                <div class="bookBox" id="book72018Descrip">
+                    <p class="bookTitle">The Big Short: Inside the Doomsday Machine</p>
+                    <p class="booksubTitle">by Michael Lewis</p>
+                    <p class="bookDescrip">When the crash of the U.S. stock market became public knowledge in the fall of 2008, it was already old news. The real crash, the silent crash, had taken place over the previous year, in bizarre feeder markets where the sun doesn’t shine and the SEC doesn’t dare, or bother, to tread. Who understood the risk inherent in the assumption of ever-rising real estate prices, a risk compounded daily by the creation of those arcane, artificial securities loosely based on piles of doubtful mortgages? In this fitting sequel to Liar’s Poker, Michael Lewis answers that question in a narrative brimming with indignation and dark humor.</p>
+                </div>
+
+                <div class="bookBox " id="book82018Descrip">
+                    <p class="bookTitle">Elon Musk</p>
+                    <p class="booksubTitle">by Ashlee Vance</p>
+                    <p class="bookDescrip">Elon Musk, the entrepreneur and innovator behind SpaceX, Tesla, and SolarCity, sold one of his internet companies, PayPal, for $1.5 billion. Ashlee Vance captures the full spectacle and arc of the genius's life and work, from his tumultuous upbringing in South Africa and flight to the United States to his dramatic technical innovations and entrepreneurial pursuits. Vance uses Musk's story to explore one of the pressing questions of our age: can the nation of inventors and creators who led the modern world for a century still compete in an age of fierce global competition?</p>
+                </div>
+                <div class="bookBox booknoRepeat" id="book82018">
+                </div> 
+
+                <div class="bookBox booknoRepeat" id="book92018">
+                </div> 
+                <div class="bookBox" id="book92018Descrip">
+                    <p class="bookTitle">1984</p>
+                    <p class="booksubTitle">by Goerge Orwell</p>
+                    <p class="bookDescrip">The year 1984 has come and gone, but George Orwell's prophetic, nightmarish vision in 1949 of the world we were becoming is timelier than ever. 1984 is still the great modern classic of "negative utopia"—a startlingly original and haunting novel that creates an imaginary world that is completely convincing, from the first sentence to the last four words. No one can deny the novel's hold on the imaginations of whole generations, or the power of its admonitions—a power that seems to grow, not lessen, with the passage of time.</p>
+                </div>
+
+                <div class="bookBox " id="book102018Descrip">
+                    <p class="bookTitle">Homo Deus</p>
+                    <p class="booksubTitle">by Noah Yuval Harari</p>
+                    <p class="bookDescrip">Over the past century humankind has managed to do the impossible and rein in famine, plague, and war. This may seem hard to accept, but, as Harari explains in his trademark style—thorough, yet riveting—famine, plague and war have been transformed from incomprehensible and uncontrollable forces of nature into manageable challenges. For the first time ever, more people die from eating too much than from eating too little; more people die from old age than from infectious diseases; and more people commit suicide than are killed by soldiers, terrorists and criminals put together. The average American is a thousand times more likely to die from binging at McDonalds than from being blown up by Al Qaeda.</p>
+                </div>
+                <div class="bookBox booknoRepeat" id="book102018">
+                </div> 
             </div>
         </div>
     </body>
- 
 </html>
