changed image pictures

--- a/thisYear.html
+++ b/thisYear.html
@@ -8,7 +8,7 @@
         <!-- google font links -->
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-        
+
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" media="screen" href="styles.css" /> 
     </head>
@@ -59,6 +59,14 @@
                     <p class="bookDescrip">and contains such engaging pieces as "Reading" and "The Pond in the Winter" Other famous sections involve Thoreau's visits with a Canadian woodcutter and with an Irish family, a trip to Concord, and a description of his bean field. This is the complete and authoritative text of Walden-as close to Thoreau's original intention as all available evidence allows. For the student and for the general reader, this is the ideal presentation of Thoreau's great document of social criticism and dissent.</p>
                 </div>
                 <div class="bookBox booknoRepeat" id="book42019">
+                </div>
+
+                <div class="bookBox booknoRepeat" id="book52019">
+                </div> 
+                <div class="bookBox" id="book52019Descrip">
+                    <p class="bookTitle">10% Happier</p>
+                    <p class="booksubTitle">by Dan Harris</p>
+                    <p class="bookDescrip">After having a nationally televised panic attack on Good Morning America, Dan Harris knew he had to make some changes. A lifelong nonbeliever, he found himself on a bizarre adventure, involving a disgraced pastor, a mysterious self-help guru, and a gaggle of brain scientists. Eventually, Harris realized that the source of his problems was the very thing he always thought was his greatest asset: the incessant, insatiable voice in his head, which had both propelled him through the ranks of a hyper-competitive business and also led him to make the profoundly stupid decisions that provoked his on-air freak-out.</p>
                 </div>
             </div>
         </div>
