huge design and interaction changes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 </head>
 <body>
-<h1>Are They Worth It?</h1>
-<h2>Player Spending VS Team Performance in the Premier League</h2>
+<h1 class="title">Are They Worth It?</h1>
+<h2 class="title" id="secondTitle">Player Spending VS Team Performance in the Premier League</h2>
 
 
 <div class="svgContainer">
@@ -22,7 +22,7 @@
     <svg id="vis" class="svg_boxes">
 
     </svg>
-    <canvas id="myChart" width="400" height="400"></canvas>
+    <canvas class="invisible" id="myChart" width="400" height="350"></canvas>
 </div>
 
 
